# TextualCode

./: .gitattributes  .gitignore  BUG_REPORT.md  CLAUDE.md  README.md  bench_render.py  bugs2.md  install.ps1  install.sh  pyproject.toml
.claude/: state.md
.claude/lessons/: INDEX.md  always-sanitize-model-controlled-filenames.md  apply-selection-as-post-style-not-base-style.md  apply-ui-density-as-app-reactive.md  auto-mode-persists-to-usersettings-only.md  (+106 more)
docs/: app-refactor-plan.md
reviews/: agent.py.md  committer.py.md  dispatcher.py.md  harvest.py.md  renderer.py.md  reviewer.py.md  tool_cards.py.md  transcript.py.md  workspace_panel.py.md
tests/: test_agent_permissions.py  test_conversation_layout.py  test_conversation_selection.py  test_harvest.py  test_isolated_clients.py  test_quit_copy.py  test_reviewer.py  test_tool_cards_quality.py  test_tool_cards_render.py  test_tool_cards_security.py  test_workspace_panel_escape.py  test_workspace_panel_render.py
textualcode/: __init__.py  __main__.py  accounting.py  agent.py  app.py  app.tcss  commands.py  committer.py  config.py  conversation.py  dispatcher.py  effort_controller.py  errors.py  formatting.py  gitinfo.py  groups.py  harvest.py  harvest_controller.py  lessons.py  mcp_controller.py  modal_bridge.py  model_controller.py  permissions.py  prompt_input.py  prompts.py  quit_guard.py  renderer.py  reviewer.py  screens.py  selectable_static.py  session_controller.py  stats.py  stats_panel.py  status.py  task_cards.py  thinking_bar.py  tool_cards.py  tools_controller.py  transcript.py  widgets.py  (+2 more)
(+10 files in other folders)
