[project]
name = "textualcode"
version = "0.4.0"
description = "A stub Claude-Code-style terminal UI built with Textual"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.2.88",
    "textual>=0.80",
]

[project.scripts]
tcode = "textualcode.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["textualcode"]

[tool.uv]
package = true
